ajout experience dev

--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                     </li>
-                    <li>JAVASCRIPT <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <li>JavaScript <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
@@ -59,33 +59,7 @@
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                     </li>
-                </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>FRAMEWORK</h3>
-                <ul class="list-unstyled">
-                    <li>BOOTSTRAP
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                    </li>
-                     <li>JQUERY
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                    </li>
-                    <li>ANGULAR JS
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                        <i class="fa fa-circle" aria-hidden="true"></i>
-                    </li>
-                    <li>SYMFONY
-                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    <li>SQL <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
@@ -93,15 +67,116 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>EDITEUR DE TEXTE/IDE</h3>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>FRAMEWORKS/BIBLIOTHEQUES</h3>
                 <ul class="list-unstyled">
-                    <li>ATOM
+                    <li>Bootstrap
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>jQuery/jQuery UI
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Angular JS
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Symfony
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>SYSTEMES EXPLOITATION</h3>
+                <ul class="list-unstyled">
+                    <li>WINDOWS
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>   
+                    <li>LINUX
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>      
+                </ul>
+            </div>
+        </div>
+        <div class="row">            
+            <div class="col-lg-offset-1 col-lg-3 col-md-6 col-sm-6 col-xs-12"><h3>OUTILS</h3>
+                <ul class="list-unstyled">
+                    <li>Ligne de commande
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Nano
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Atom
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>         
-                    <li>NETBEANS
+                    <li>NetBeans
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Git
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Github/Bitbucket
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>                        
+                    <li>LAMP/WAMP
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>GIMP
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                        <i class="fa fa-circle" aria-hidden="true"></i>
+                    </li>
+                    <li>Pencil
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
@@ -109,90 +184,57 @@
                         <i class="fa fa-circle" aria-hidden="true"></i>
                     </li>
                 </ul>
-            </div>
+            </div>                          
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>LANGUES</h3>
+            <ul class="list-unstyled">
+                <li>ANGLAIS
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                </li>
+                <li>FRANCAIS
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                </li>
+            </ul>
         </div>
-        <div class="row">            
-                <div class="col-lg-offset-1 col-lg-3 col-md-6 col-sm-6 col-xs-12"><h3>SYSTEMES EXPLOITATION</h3>
-                    <ul class="list-unstyled">
-                        <li>WINDOWS - LINUX
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                        </li>
-                        <li>TERMINAL - NANO
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>OUTILS</h3>
-                    <ul class="list-unstyled">
-                        <li>GIT - GITHUB
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>LANGUES</h3>
-                    <ul class="list-unstyled">
-                        <li>ANGLAIS
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                        </li>
-                        <li>FRANCAIS
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                            <i class="fa fa-circle" aria-hidden="true"></i>
-                        </li>
-                    </ul>
-                </div>
-        </div>
-<div class="row">
-    <div class="col-lg-offset-1 col-lg-11 col-md-6 col-sm-6 col-xs-12"><h3>QUALITES PERSONNELLES</h3>
-        <ul class="list-unstyled">
-            <li>ADAPTATION
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </li>
-            <li>RIGUEUR
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </li>
-            <li>ESPRIT EQUIPE
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-            </li>
-            <li>AUTONOMIE
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                <i class="fa fa-circle" aria-hidden="true"></i>
-            </li>
-        </ul> 
-    </div>
-</div>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>QUALITES PERSONNELLES</h3>
+            <ul class="list-unstyled">
+                <li>ADAPTATION
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </li>
+                <li>RIGUEUR
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </li>
+                <li>ESPRIT EQUIPE
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                </li>
+                <li>AUTONOMIE
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                    <i class="fa fa-circle" aria-hidden="true"></i>
+                </li>
+            </ul> 
+        </div> 
+      </div>
 </body>
 </html>
