--- a/index4.html
+++ b/index4.html
@@ -41,8 +41,11 @@
             <section id="contenuExperience">
                 <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>Expérience en développement</h2>
                     <ul>
-                        <li><strong>2017</strong> Développeur Web en formation intensive et immersive 35h/semaine pendant 6 mois à École E2N à NOYON(60)</li>
-                    </ul>
+                        <li><strong>2017</strong> Développeuse Web en formation intensive et immersive 35h/semaine pendant 6 mois à École E2N à NOYON(60)</li>
+                            <p><strong>* Projet e-Commerce : </strong>création et développement d'un site e-Commerce (technologies utilisées : HTLM5/CSS, Bootstrap, JavaScript, jQuery). Réalisé en 3 jours en équipe de 4.</p>
+                            <p><strong>* Projet Quiz :</strong> création et développement d'un Quiz de 16 questions à l'occasion de la journée des droits des femmes (technologies utilisées : HTLM5/CSS, Bootstrap, JavaScript, jQuery, PHP). Réalisé en 2 jours en équipe de 9 femmes.</p>
+                            <p><strong>* Projet site en Responsive Web Design :</strong> reproduction et développement d'un connu en RWD (technologies utilisées : HTLM5/CSS, Bootstrap). Réalisé en 2 jours en équipe de 4.</p>
+                </ul>
                 </div>
                 <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>Parcours professionnel</h2>
                     <ul>
