--- a/index5.html
+++ b/index5.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="row">
-            <section id="centresInterets">
+            <section id="centresInteret">
                 <div class="col-lg-offset-1 col-lg-11 col-md-10 col-sm-12 col-xs-12"><h2>Centres d'Intérêt</h2>
                     <ul class="list-unstyled">
                         <li>Internet</li>
