--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>FRAMEWORKS/BIBLIOTHEQUES</h3>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>FRAMEWORKS/BIBLIOTHÈQUES</h3>
                 <ul class="list-unstyled">
                     <li>Bootstrap
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -99,16 +99,16 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>SYSTEMES EXPLOITATION</h3>
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>SYSTÈMES EXPLOITATION</h3>
                 <ul class="list-unstyled">
-                    <li>WINDOWS
+                    <li>Windows
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-circle" aria-hidden="true"></i>
                     </li>   
-                    <li>LINUX
+                    <li>Linux
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
                         <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -187,14 +187,14 @@
             </div>                          
         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>LANGUES</h3>
             <ul class="list-unstyled">
-                <li>ANGLAIS
+                <li>Anglais
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     <i class="fa fa-circle" aria-hidden="true"></i>
                     <i class="fa fa-circle" aria-hidden="true"></i>
                 </li>
-                <li>FRANCAIS
+                <li>Français
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
                     <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -203,36 +203,12 @@
                 </li>
             </ul>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>QUALITES PERSONNELLES</h3>
+        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"><h3>QUALITÉS PERSONNELLES</h3>
             <ul class="list-unstyled">
-                <li>ADAPTATION
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                </li>
-                <li>RIGUEUR
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                </li>
-                <li>ESPRIT EQUIPE
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                </li>
-                <li>AUTONOMIE
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                    <i class="fa fa-circle" aria-hidden="true"></i>
-                </li>
+                <li>Adaptation</li>
+                <li>Rigueur</li>
+                <li>Esprit d'équipe</li>
+                <li>Autonome</li>
             </ul> 
         </div> 
       </div>
