--- a/index5.html
+++ b/index5.html
@@ -41,11 +41,11 @@
             <section id="centresInteret">
                 <div class="col-lg-offset-1 col-lg-11 col-md-10 col-sm-12 col-xs-12"><h2>Centres d'Intérêt</h2>
                     <ul class="list-unstyled">
-                        <li>Internet</li>
-                        <li>Les nouvelles technologies</li>
-                        <li>Peinture à l'huile</li>
-                        <li>Travaux Manuels</li>
-                        <li>Chocolat Noir</li>
+                        <li>Internet <i class="fa fa-globe" aria-hidden="true"></i></li>
+                        <li>Les nouvelles technologies <i class="fa fa-mobile" aria-hidden="true"></i></li>
+                        <li>Peinture à l'huile <i class="fa fa-paint-brush" aria-hidden="true"></i></li>
+                        <li>Travaux Manuels <i class="fa fa-wrench" aria-hidden="true"></i></li>
+                        <li>Chocolat Noir <img ></li>
                     </ul>
                 </div>
             </section>
