--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <body>
         <div class="container">
             <header class="row">
-                <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>DEVELOPPPEUSE WEB JUNIOR</h2></div>
+                <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>DÉVELOPPPEUSE WEB JUNIOR</h2></div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img src="img/photomoi.jpg" alt="photoperso" title="ma photo"></div>
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <p><em>Après avoir exercé le métier d'assistante commerciale pendant une vingtaine d'année dans
+                        <p><em>Après avoir exercé le métier d'assistante commerciale pendant une vingtaine d'années dans
                                 diverses entreprises, j’ai souhaité me reconvertir dans le développement Web car je suis une
                                 personne curieuse et tournée vers les nouvelles technologies, j’aime évoluer dans ce
                                 domaine très technique qui demande rigueur et patience.</em></p>
