--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <div class="container">
-            <header class="row">
+            <header>
                 <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>DÉVELOPPPEUSE WEB JUNIOR</h2></div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img src="img/photomoi.jpg" alt="photoperso" title="ma photo"></div>
                 <div class="row">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="navbar navbar-inverse">
+                        <nav class="navbar navbar-inverse">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="#"><h4><strong>Coordonnées</strong></h4></a></li>
                                 <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
@@ -46,7 +46,7 @@
                                 <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
                                 <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
                             </ul>
-                        </div>
+                        </nav>
                     </div>
                 </div>
             </header>
