--- a/index3.html
+++ b/index3.html
@@ -24,46 +24,46 @@
         <title>Formation</title>
     </head>
     <body>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="navbar navbar-inverse">
-                    <ul class="nav navbar-nav">
-                        <li class="menu"><a href="index.html"><h4><strong>Coordonnées</strong></h4></a></li>
-                        <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
-                        <li class="active"><a href="#"><h4><strong>Formation</strong></h4></a></li>
-                        <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
-                        <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
-                    </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="navbar navbar-inverse">
+                        <ul class="nav navbar-nav">
+                            <li class="menu"><a href="index.html"><h4><strong>Coordonnées</strong></h4></a></li>
+                            <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
+                            <li class="active"><a href="#"><h4><strong>Formation</strong></h4></a></li>
+                            <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
+                            <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="contenair">
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>DÉVELOPPEUSE WEB (2017)</h2></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>DÉVELOPPEUSE WEB (2017)</h2></div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><p><a href="http://formation.novei.fr/" title="Ecole Numérique du Noyonnais"> E2N - Campus Inovia à Noyon (60)</a></p></div>
+                <div class="1 col-lg-12 col-md-12 col-sm-12 col-xs-12"><p><a href="http://formation.novei.fr/" title="Ecole Numérique du Noyonnais"> E2N - Campus Inovia à Noyon (60)</a></p></div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><p>Formation immersive et intensive(35h/semaine/6mois), la formation utilise une pédagogie innovante, qui s’inspire des pratiques professionnelles de « terrain » dans le développement informatique : apprentissage par la pratique, apprendre à apprendre, programmation en binôme, évaluation par les pairs, mise en situation de transmission et développement de l’autonomie.</p><p>La formation prépare au titre professionnel « Développeur-se logiciel  TP01280» inscrit au RNCP Niveau III équivalent BAC+2.</p></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Formation immersive et intensive(35h/semaine/6mois), la formation utilise une pédagogie innovante, qui s’inspire des pratiques professionnelles de « terrain » dans le développement informatique : apprentissage par la pratique, apprendre à apprendre, programmation en binôme, évaluation par les pairs, mise en situation de transmission et développement de l’autonomie.</p><p>La formation prépare au titre professionnel « Développeur-se logiciel  TP01280» inscrit au RNCP Niveau III équivalent BAC+2.</p></div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-sm-12 col-xs-12"><p>La formation est labellisée <a href="http://www.grandeecolenumerique.fr" title="GEN">Grande Ecole du Numérique par l’Etat.</a></p></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>La formation est labellisée <a href="http://www.grandeecolenumerique.fr" title="GEN">Grande Ecole du Numérique par l’Etat.</a></p></div>
             </div><br>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><p>Préparation du Titre professionnel de Développeur-se logiciel (2017)<strong> Niveau III</strong></p></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Préparation du Titre professionnel de Développeur-se logiciel (2017)<strong> Niveau III</strong></p></div>
             </div><br>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>VENTE</h2></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>VENTE</h2></div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><p>Obtention du Titre professionnel de Vendeur-se Conseil (2016)<strong> Niveau VI</strong></p></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Obtention du Titre professionnel de Vendeur-se Conseil (2016)<strong> Niveau VI</strong></p></div>
             </div><br>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>GESTION / BUREAUTIQUE</h2></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>GESTION / BUREAUTIQUE</h2></div>
             </div>
             <div class="row">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><p>Obtention du Baccalauréat Gestion Bureautique (1993)<strong> Niveau VI</strong></p></div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><p>Obtention du Baccalauréat Gestion Bureautique (1993)<strong> Niveau VI</strong></p></div>
             </div>
         </div>
     </body>
