--- a/index4.html
+++ b/index4.html
@@ -24,43 +24,45 @@
         <title>Expérience professionnelle</title>
     </head>
     <body>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="navbar navbar-inverse">
-                    <ul class="nav navbar-nav">
-                        <li class="menu"><a href="index.html"><h4><strong>Coordonnées</strong></h4></a></li>
-                        <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
-                        <li class="menu"><a href="index3.html"><h4><strong>Formation</strong></h4></a></li>
-                        <li class="active"><a href="#"><h4><strong>Expérience professionnelle</strong></h4></a></li>
-                        <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
-                    </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="navbar navbar-inverse">
+                        <ul class="nav navbar-nav">
+                            <li class="menu"><a href="index.html"><h4><strong>Coordonnées</strong></h4></a></li>
+                            <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
+                            <li class="menu"><a href="index3.html"><h4><strong>Formation</strong></h4></a></li>
+                            <li class="active"><a href="#"><h4><strong>Expérience professionnelle</strong></h4></a></li>
+                            <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <section id="contenuExperience">
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>Expérience en développement</h2>
-                    <ul>
-                        <li><strong>2017</strong> Développeuse Web en formation intensive et immersive 35h/semaine pendant 6 mois à <abbr title="École du Numérique du Noyonnais">E2N</abbr> à NOYON(60)</li>
+            <div class="row">
+                <section id="contenuExperience">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Expérience en développement</h2>
+                        <ul>
+                            <li><strong>2017</strong> Développeuse Web en formation intensive et immersive 35h/semaine pendant 6 mois à <abbr title="École du Numérique du Noyonnais">E2N</abbr> à NOYON(60)</li>
                             <p><strong>* Projet e-Commerce : </strong>création et développement d'un site e-Commerce (technologies utilisées : HTLM5/CSS, Bootstrap, JavaScript, jQuery). Réalisé en 3 jours en équipe de 4.</p>
                             <p><strong>* Projet Quiz :</strong> création et développement d'un Quiz de 16 questions à l'occasion de la journée des droits des femmes (technologies utilisées : HTLM5/CSS, Bootstrap, JavaScript, jQuery, PHP). Réalisé en 2 jours en équipe de 9 femmes.</p>
                             <p><strong>* Projet site en Responsive Web Design :</strong> reproduction et développement d'un connu en RWD (technologies utilisées : HTLM5/CSS, Bootstrap). Réalisé en 2 jours en équipe de 4.</p>
-                </ul>
-                </div>
-                <div class="col-lg-offset-1 col-lg-11 col-md-11 col-sm-12 col-xs-12"><h2>Parcours professionnel</h2>
-                    <ul>
-                        <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
-                        <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
-                        <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
-                        <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
-                        <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
-                        <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
-                        <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
-                        <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
-                        <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
-                    </ul>
-                </div>
-            </section>
-        </div>
+                        </ul>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h2>Parcours professionnel</h2>
+                        <ul>
+                            <li><strong>2015-2016</strong> Assistante Commerciale/ Agent Commercial à Agence VERNON IMMOBILIER (27)</li>
+                            <li><strong>2014</strong> Assistante Gestion à CLOTURES IDF (27)</li>
+                            <li><strong>2014</strong> Assitante administrative et comptable à CE Lamotte CLARIANT (60)</li>
+                            <li><strong>2008 -2010</strong> Assistante technico-commerciale à AUDITION BENOIT (60)</li>
+                            <li><strong>2007</strong> Hôtesse commerciale à HYGENA CUISINES (78)</li>
+                            <li><strong>2006</strong> Standardiste - Assistante administrative à SUPEX (27)</li>
+                            <li><strong>1996-2005</strong> Secrétaire polyvalente à CYCLO-NEWS (27)</li>
+                            <li><strong>1994-1996</strong> Assistante administration des ventes à AGFA-GEVAERT (92)</li>
+                            <li><strong>1993</strong> Secrétaire commerciale à AGENCE DE L'EMPEREUR (92)</li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+        </div>        
     </body>
 </html>
