--- a/index2.html
+++ b/index2.html
@@ -156,7 +156,7 @@
                             <i class="fa fa-circle" aria-hidden="true"></i>
                             <i class="fa fa-circle" aria-hidden="true"></i>
                         </li>
-                        <li>Github/Bitbucket
+                        <li>GitHub/Bitbucket
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
                             <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -209,7 +209,7 @@
                         <li>Adaptation</li>
                         <li>Rigueur</li>
                         <li>Esprit d'équipe</li>
-                        <li>Autonome</li>
+                        <li>Autonomie</li>
                     </ul> 
                 </div> 
             </div>
