--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
                 <div class="col-lg-8 colcol-md-8 col-sm-12 col-xs-12"><h1>Véronique BOULNOIS</h1><h2>DÉVELOPPPEUSE WEB JUNIOR</h2></div>
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <p><em>Après avoir exercé le métier d'assistante commerciale pendant une vingtaine d'années dans
-                                diverses entreprises, j’ai souhaité me reconvertir dans le développement Web car je suis une
-                                personne curieuse et tournée vers les nouvelles technologies, j’aime évoluer dans ce
+                        <p><em>Après avoir exercé des fonctions commerciales pendant 20 ans dans divers secteurs, j'ai souhaité m'orienter vers le développement web car je suis une personne curieuse et tournée vers les nouvelles technologies. J’aime évoluer dans ce
                                 domaine très technique qui demande rigueur et patience.</em></p>
                     </div>
                 </div>
@@ -40,10 +38,10 @@
                         <nav class="navbar navbar-inverse">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="#"><h4><strong>Coordonnées</strong></h4></a></li>
-                                <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
-                                <li class="menu"><a href="index3.html"><h4><strong>Formation</strong></h4></a></li>
-                                <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
-                                <li class="menu"><a href="index5.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
+                                <li class="menu"><a href="competences.html"><h4><strong>Compétences</strong></h4></a></li>
+                                <li class="menu"><a href="formations.html"><h4><strong>Formations</strong></h4></a></li>
+                                <li class="menu"><a href="experiences.html"><h4><strong>Expériences professionnelles</strong></h4></a></li>
+                                <li class="menu"><a href="interet.html"><h4><strong>Centres d'intérêt</strong></h4></a></li>
                             </ul>
                         </nav>
                     </div>
@@ -53,8 +51,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><strong>Adresse : </strong><p>TROSLY BREUIL (Oise) - Hauts-de-France<br>50 min Paris Gare du Nord</p>
                     <p><strong>Téléphone : </strong></p><p>07.83.27.97.13</p>
                     <p><strong>E-mail : </strong><a href="mailto:vero.boulnois@gmail.com" title="mon email"><i class="fa fa-envelope fa-2x logoreseau" aria-hidden="true"></i></a></p>
-                    <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/veronique-boulnois/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a>
-                        <a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
+                    <p><strong>Réseaux sociaux : </strong><a  href="https://www.linkedin.com/in/veronique-boulnois/" title="mon linkedin"><i class="fa fa-linkedin fa-2x logoreseau" aria-hidden="true"></i></a><a  href="https://github.com/veroboulnois" title="mon github"><i class="fa fa-github fa-2x logoreseau" aria-hidden="true"></i></a></p>
                 </div>
             </div>
         </div>
