--- a/interet.html
+++ b/interet.html
@@ -21,7 +21,7 @@
             ga('create', 'UA-91921684-1', 'auto');
             ga('send', 'pageview');
         </script>
-        <title>Centre d'intérêt</title>
+        <title>Centres d'intérêt</title>
     </head>
     <body>
         <div class="container">
@@ -30,31 +30,21 @@
                     <div class="navbar navbar-inverse">
                         <ul class="nav navbar-nav">
                             <li class="menu"><a href="index.html"><h4><strong>Coordonnées</strong></h4></a></li>
-                            <li class="menu"><a href="index2.html"><h4><strong>Compétences</strong></h4></a></li>
-                            <li class="menu"><a href="index3.html"><h4><strong>Formation</strong></h4></a></li>
-                            <li class="menu"><a href="index4.html"><h4><strong>Expérience professionnelle</strong></h4></a></li>
+                            <li class="menu"><a href="competences.html"><h4><strong>Compétences</strong></h4></a></li>
+                            <li class="menu"><a href="formations.html"><h4><strong>Formations</strong></h4></a></li>
+                            <li class="menu"><a href="experiences.html"><h4><strong>Expériences professionnelles</strong></h4></a></li>
                             <li class="active"><a href="#"><h4><strong>Centres d'intérêt</strong></h4></a></li>
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <section id="centresInteret">
-                    <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Centres d'Intérêt</h2>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"><h2>Centres d'Intérêt</h2>
                         <ul class="list-unstyled">
                             <li>Internet <i class="fa fa-globe" aria-hidden="true"></i></li>
                             <li>Les nouvelles technologies <i class="fa fa-mobile" aria-hidden="true"></i></li>
                             <li>Peinture à l'huile <i class="fa fa-paint-brush" aria-hidden="true"></i></li>
                             <li>Travaux Manuels <i class="fa fa-wrench" aria-hidden="true"></i></li>
-                            <li>Chocolat Noir <img ></li>
-                        </ul>
-                    </div>
-                </section>
-                <section id="projets">
-                    <div class="col-lg-12 col-md-10 col-sm-12 col-xs-12"><h2>Projets en cours</h2>
-                        <ul class="list-unstyled">
-                            <li>Site vitrine d'un sculpteur sur Pierre et Bois</li>
-                            <li>CV numériques</li>
+                            <li>Chocolat Noir</li>
                         </ul>
                     </div>
                 </section>
